// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown renders without error empty 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  width: 100px;
  margin: 0;
  padding: 0;
  display: block;
  height: 0;
}

.c1 {
  position: absolute;
  box-sizing: border-box;
  list-style: 'none';
  width: 200px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  max-height: 300px;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 3px;
  box-shadow: 3px 3px 5px 0 #999;
  z-index: 100000;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

<body>
    <div>
      <div
        class="c0"
      >
        <ul
          class="c1"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  width: 100px;
  margin: 0;
  padding: 0;
  display: block;
  height: 0;
}

.c1 {
  position: absolute;
  box-sizing: border-box;
  list-style: 'none';
  width: 200px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  max-height: 300px;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 3px;
  box-shadow: 3px 3px 5px 0 #999;
  z-index: 100000;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

<div>
    <div
      class="c0"
    >
      <ul
        class="c1"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DropDown renders without error objects, no query 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  width: 100px;
  margin: 0;
  padding: 0;
  display: block;
  height: 0;
}

.c1 {
  position: absolute;
  box-sizing: border-box;
  list-style: 'none';
  width: 200px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  max-height: 300px;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 3px;
  box-shadow: 3px 3px 5px 0 #999;
  z-index: 100000;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2 {
  padding: 4px 10px;
  font-size: 16px;
  font-weight: 400;
  width: auto;
  cursor: pointer;
}

.c2:hover {
  background-color: #d0d0d0;
  border: '1px solid #ccc';
}

<body>
    <div>
      <div
        class="c0"
      >
        <ul
          class="c1"
        >
          <li
            class="c2"
          >
            abc_test_def
          </li>
          <li
            class="c2"
          >
            no_t_e_s_t
          </li>
          <li
            class="c2"
          >
            TestRandom1
          </li>
          <li
            class="c2"
          >
            another-test23
          </li>
          <li
            class="c2"
          >
            thisIs_test4
          </li>
          <li
            class="c2"
          >
            testxyzabc_Test
          </li>
          <li
            class="c2"
          >
            Ghi_test1jktest2ltest3
          </li>
          <li
            class="c2"
          >
            lmntestop
          </li>
          <li
            class="c2"
          >
            uv_test_wxyz
          </li>
          <li
            class="c2"
          >
            test123abc
          </li>
          <li
            class="c2"
          >
            opqtestrst
          </li>
          <li
            class="c2"
          >
            word_with_test
          </li>
          <li
            class="c2"
          >
            thetestinmiddle
          </li>
          <li
            class="c2"
          >
            testStartWithTest
          </li>
          <li
            class="c2"
          >
            endwithtest
          </li>
          <li
            class="c2"
          >
            more_test_here
          </li>
          <li
            class="c2"
          >
            A_test_bc_test
          </li>
          <li
            class="c2"
          >
            randteststr
          </li>
          <li
            class="c2"
          >
            sometesttxt
          </li>
          <li
            class="c2"
          >
            stillteston6
          </li>
          <li
            class="c2"
          >
            yet_another_test
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": .c0 {
  width: 100px;
  margin: 0;
  padding: 0;
  display: block;
  height: 0;
}

.c1 {
  position: absolute;
  box-sizing: border-box;
  list-style: 'none';
  width: 200px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  max-height: 300px;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 3px;
  box-shadow: 3px 3px 5px 0 #999;
  z-index: 100000;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2 {
  padding: 4px 10px;
  font-size: 16px;
  font-weight: 400;
  width: auto;
  cursor: pointer;
}

.c2:hover {
  background-color: #d0d0d0;
  border: '1px solid #ccc';
}

<div>
    <div
      class="c0"
    >
      <ul
        class="c1"
      >
        <li
          class="c2"
        >
          abc_test_def
        </li>
        <li
          class="c2"
        >
          no_t_e_s_t
        </li>
        <li
          class="c2"
        >
          TestRandom1
        </li>
        <li
          class="c2"
        >
          another-test23
        </li>
        <li
          class="c2"
        >
          thisIs_test4
        </li>
        <li
          class="c2"
        >
          testxyzabc_Test
        </li>
        <li
          class="c2"
        >
          Ghi_test1jktest2ltest3
        </li>
        <li
          class="c2"
        >
          lmntestop
        </li>
        <li
          class="c2"
        >
          uv_test_wxyz
        </li>
        <li
          class="c2"
        >
          test123abc
        </li>
        <li
          class="c2"
        >
          opqtestrst
        </li>
        <li
          class="c2"
        >
          word_with_test
        </li>
        <li
          class="c2"
        >
          thetestinmiddle
        </li>
        <li
          class="c2"
        >
          testStartWithTest
        </li>
        <li
          class="c2"
        >
          endwithtest
        </li>
        <li
          class="c2"
        >
          more_test_here
        </li>
        <li
          class="c2"
        >
          A_test_bc_test
        </li>
        <li
          class="c2"
        >
          randteststr
        </li>
        <li
          class="c2"
        >
          sometesttxt
        </li>
        <li
          class="c2"
        >
          stillteston6
        </li>
        <li
          class="c2"
        >
          yet_another_test
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DropDown renders without error objects, query="test" 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  width: 100px;
  margin: 0;
  padding: 0;
  display: block;
  height: 0;
}

.c1 {
  position: absolute;
  box-sizing: border-box;
  list-style: 'none';
  width: 200px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  max-height: 300px;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 3px;
  box-shadow: 3px 3px 5px 0 #999;
  z-index: 100000;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2 {
  padding: 4px 10px;
  font-size: 16px;
  font-weight: 400;
  width: auto;
  cursor: pointer;
}

.c2:hover {
  background-color: #d0d0d0;
  border: '1px solid #ccc';
}

.c3 {
  background-color: yellow;
  font-weight: bold;
}

<body>
    <div>
      <div
        class="c0"
      >
        <ul
          class="c1"
        >
          <li
            class="c2"
          >
            abc_
            <span
              class="c3"
            >
              test
            </span>
            _def
          </li>
          <li
            class="c2"
          >
            no_t_e_s_t
          </li>
          <li
            class="c2"
          >
            <span
              class="c3"
            >
              Test
            </span>
            Random1
          </li>
          <li
            class="c2"
          >
            another-
            <span
              class="c3"
            >
              test
            </span>
            23
          </li>
          <li
            class="c2"
          >
            thisIs_
            <span
              class="c3"
            >
              test
            </span>
            4
          </li>
          <li
            class="c2"
          >
            <span
              class="c3"
            >
              test
            </span>
            xyzabc_
            <span
              class="c3"
            >
              Test
            </span>
          </li>
          <li
            class="c2"
          >
            Ghi_
            <span
              class="c3"
            >
              test
            </span>
            1jk
            <span
              class="c3"
            >
              test
            </span>
            2l
            <span
              class="c3"
            >
              test
            </span>
            3
          </li>
          <li
            class="c2"
          >
            lmn
            <span
              class="c3"
            >
              test
            </span>
            op
          </li>
          <li
            class="c2"
          >
            uv_
            <span
              class="c3"
            >
              test
            </span>
            _wxyz
          </li>
          <li
            class="c2"
          >
            <span
              class="c3"
            >
              test
            </span>
            123abc
          </li>
          <li
            class="c2"
          >
            opq
            <span
              class="c3"
            >
              test
            </span>
            rst
          </li>
          <li
            class="c2"
          >
            word_with_
            <span
              class="c3"
            >
              test
            </span>
          </li>
          <li
            class="c2"
          >
            the
            <span
              class="c3"
            >
              test
            </span>
            inmiddle
          </li>
          <li
            class="c2"
          >
            <span
              class="c3"
            >
              test
            </span>
            StartWith
            <span
              class="c3"
            >
              Test
            </span>
          </li>
          <li
            class="c2"
          >
            endwith
            <span
              class="c3"
            >
              test
            </span>
          </li>
          <li
            class="c2"
          >
            more_
            <span
              class="c3"
            >
              test
            </span>
            _here
          </li>
          <li
            class="c2"
          >
            A_
            <span
              class="c3"
            >
              test
            </span>
            _bc_
            <span
              class="c3"
            >
              test
            </span>
          </li>
          <li
            class="c2"
          >
            rand
            <span
              class="c3"
            >
              test
            </span>
            str
          </li>
          <li
            class="c2"
          >
            some
            <span
              class="c3"
            >
              test
            </span>
            txt
          </li>
          <li
            class="c2"
          >
            still
            <span
              class="c3"
            >
              test
            </span>
            on6
          </li>
          <li
            class="c2"
          >
            yet_another_
            <span
              class="c3"
            >
              test
            </span>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": .c0 {
  width: 100px;
  margin: 0;
  padding: 0;
  display: block;
  height: 0;
}

.c1 {
  position: absolute;
  box-sizing: border-box;
  list-style: 'none';
  width: 200px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  max-height: 300px;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 3px;
  box-shadow: 3px 3px 5px 0 #999;
  z-index: 100000;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2 {
  padding: 4px 10px;
  font-size: 16px;
  font-weight: 400;
  width: auto;
  cursor: pointer;
}

.c2:hover {
  background-color: #d0d0d0;
  border: '1px solid #ccc';
}

.c3 {
  background-color: yellow;
  font-weight: bold;
}

<div>
    <div
      class="c0"
    >
      <ul
        class="c1"
      >
        <li
          class="c2"
        >
          abc_
          <span
            class="c3"
          >
            test
          </span>
          _def
        </li>
        <li
          class="c2"
        >
          no_t_e_s_t
        </li>
        <li
          class="c2"
        >
          <span
            class="c3"
          >
            Test
          </span>
          Random1
        </li>
        <li
          class="c2"
        >
          another-
          <span
            class="c3"
          >
            test
          </span>
          23
        </li>
        <li
          class="c2"
        >
          thisIs_
          <span
            class="c3"
          >
            test
          </span>
          4
        </li>
        <li
          class="c2"
        >
          <span
            class="c3"
          >
            test
          </span>
          xyzabc_
          <span
            class="c3"
          >
            Test
          </span>
        </li>
        <li
          class="c2"
        >
          Ghi_
          <span
            class="c3"
          >
            test
          </span>
          1jk
          <span
            class="c3"
          >
            test
          </span>
          2l
          <span
            class="c3"
          >
            test
          </span>
          3
        </li>
        <li
          class="c2"
        >
          lmn
          <span
            class="c3"
          >
            test
          </span>
          op
        </li>
        <li
          class="c2"
        >
          uv_
          <span
            class="c3"
          >
            test
          </span>
          _wxyz
        </li>
        <li
          class="c2"
        >
          <span
            class="c3"
          >
            test
          </span>
          123abc
        </li>
        <li
          class="c2"
        >
          opq
          <span
            class="c3"
          >
            test
          </span>
          rst
        </li>
        <li
          class="c2"
        >
          word_with_
          <span
            class="c3"
          >
            test
          </span>
        </li>
        <li
          class="c2"
        >
          the
          <span
            class="c3"
          >
            test
          </span>
          inmiddle
        </li>
        <li
          class="c2"
        >
          <span
            class="c3"
          >
            test
          </span>
          StartWith
          <span
            class="c3"
          >
            Test
          </span>
        </li>
        <li
          class="c2"
        >
          endwith
          <span
            class="c3"
          >
            test
          </span>
        </li>
        <li
          class="c2"
        >
          more_
          <span
            class="c3"
          >
            test
          </span>
          _here
        </li>
        <li
          class="c2"
        >
          A_
          <span
            class="c3"
          >
            test
          </span>
          _bc_
          <span
            class="c3"
          >
            test
          </span>
        </li>
        <li
          class="c2"
        >
          rand
          <span
            class="c3"
          >
            test
          </span>
          str
        </li>
        <li
          class="c2"
        >
          some
          <span
            class="c3"
          >
            test
          </span>
          txt
        </li>
        <li
          class="c2"
        >
          still
          <span
            class="c3"
          >
            test
          </span>
          on6
        </li>
        <li
          class="c2"
        >
          yet_another_
          <span
            class="c3"
          >
            test
          </span>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DropDown renders without error strings, no query 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  width: 100px;
  margin: 0;
  padding: 0;
  display: block;
  height: 0;
}

.c1 {
  position: absolute;
  box-sizing: border-box;
  list-style: 'none';
  width: 200px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  max-height: 300px;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 3px;
  box-shadow: 3px 3px 5px 0 #999;
  z-index: 100000;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2 {
  padding: 4px 10px;
  font-size: 16px;
  font-weight: 400;
  width: auto;
  cursor: pointer;
}

.c2:hover {
  background-color: #d0d0d0;
  border: '1px solid #ccc';
}

<body>
    <div>
      <div
        class="c0"
      >
        <ul
          class="c1"
        >
          <li
            class="c2"
          >
            abc_test_def
          </li>
          <li
            class="c2"
          >
            no_t_e_s_t
          </li>
          <li
            class="c2"
          >
            TestRandom1
          </li>
          <li
            class="c2"
          >
            another-test23
          </li>
          <li
            class="c2"
          >
            thisIs_test4
          </li>
          <li
            class="c2"
          >
            testxyzabc_Test
          </li>
          <li
            class="c2"
          >
            Ghi_test1jktest2ltest3
          </li>
          <li
            class="c2"
          >
            lmntestop
          </li>
          <li
            class="c2"
          >
            uv_test_wxyz
          </li>
          <li
            class="c2"
          >
            test123abc
          </li>
          <li
            class="c2"
          >
            opqtestrst
          </li>
          <li
            class="c2"
          >
            word_with_test
          </li>
          <li
            class="c2"
          >
            thetestinmiddle
          </li>
          <li
            class="c2"
          >
            testStartWithTest
          </li>
          <li
            class="c2"
          >
            endwithtest
          </li>
          <li
            class="c2"
          >
            more_test_here
          </li>
          <li
            class="c2"
          >
            A_test_bc_test
          </li>
          <li
            class="c2"
          >
            randteststr
          </li>
          <li
            class="c2"
          >
            sometesttxt
          </li>
          <li
            class="c2"
          >
            stillteston6
          </li>
          <li
            class="c2"
          >
            yet_another_test
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": .c0 {
  width: 100px;
  margin: 0;
  padding: 0;
  display: block;
  height: 0;
}

.c1 {
  position: absolute;
  box-sizing: border-box;
  list-style: 'none';
  width: 200px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  max-height: 300px;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 3px;
  box-shadow: 3px 3px 5px 0 #999;
  z-index: 100000;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2 {
  padding: 4px 10px;
  font-size: 16px;
  font-weight: 400;
  width: auto;
  cursor: pointer;
}

.c2:hover {
  background-color: #d0d0d0;
  border: '1px solid #ccc';
}

<div>
    <div
      class="c0"
    >
      <ul
        class="c1"
      >
        <li
          class="c2"
        >
          abc_test_def
        </li>
        <li
          class="c2"
        >
          no_t_e_s_t
        </li>
        <li
          class="c2"
        >
          TestRandom1
        </li>
        <li
          class="c2"
        >
          another-test23
        </li>
        <li
          class="c2"
        >
          thisIs_test4
        </li>
        <li
          class="c2"
        >
          testxyzabc_Test
        </li>
        <li
          class="c2"
        >
          Ghi_test1jktest2ltest3
        </li>
        <li
          class="c2"
        >
          lmntestop
        </li>
        <li
          class="c2"
        >
          uv_test_wxyz
        </li>
        <li
          class="c2"
        >
          test123abc
        </li>
        <li
          class="c2"
        >
          opqtestrst
        </li>
        <li
          class="c2"
        >
          word_with_test
        </li>
        <li
          class="c2"
        >
          thetestinmiddle
        </li>
        <li
          class="c2"
        >
          testStartWithTest
        </li>
        <li
          class="c2"
        >
          endwithtest
        </li>
        <li
          class="c2"
        >
          more_test_here
        </li>
        <li
          class="c2"
        >
          A_test_bc_test
        </li>
        <li
          class="c2"
        >
          randteststr
        </li>
        <li
          class="c2"
        >
          sometesttxt
        </li>
        <li
          class="c2"
        >
          stillteston6
        </li>
        <li
          class="c2"
        >
          yet_another_test
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DropDown renders without error strings, query="test" 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  width: 100px;
  margin: 0;
  padding: 0;
  display: block;
  height: 0;
}

.c1 {
  position: absolute;
  box-sizing: border-box;
  list-style: 'none';
  width: 200px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  max-height: 300px;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 3px;
  box-shadow: 3px 3px 5px 0 #999;
  z-index: 100000;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2 {
  padding: 4px 10px;
  font-size: 16px;
  font-weight: 400;
  width: auto;
  cursor: pointer;
}

.c2:hover {
  background-color: #d0d0d0;
  border: '1px solid #ccc';
}

.c3 {
  background-color: yellow;
  font-weight: bold;
}

<body>
    <div>
      <div
        class="c0"
      >
        <ul
          class="c1"
        >
          <li
            class="c2"
          >
            abc_
            <span
              class="c3"
            >
              test
            </span>
            _def
          </li>
          <li
            class="c2"
          >
            no_t_e_s_t
          </li>
          <li
            class="c2"
          >
            <span
              class="c3"
            >
              Test
            </span>
            Random1
          </li>
          <li
            class="c2"
          >
            another-
            <span
              class="c3"
            >
              test
            </span>
            23
          </li>
          <li
            class="c2"
          >
            thisIs_
            <span
              class="c3"
            >
              test
            </span>
            4
          </li>
          <li
            class="c2"
          >
            <span
              class="c3"
            >
              test
            </span>
            xyzabc_
            <span
              class="c3"
            >
              Test
            </span>
          </li>
          <li
            class="c2"
          >
            Ghi_
            <span
              class="c3"
            >
              test
            </span>
            1jk
            <span
              class="c3"
            >
              test
            </span>
            2l
            <span
              class="c3"
            >
              test
            </span>
            3
          </li>
          <li
            class="c2"
          >
            lmn
            <span
              class="c3"
            >
              test
            </span>
            op
          </li>
          <li
            class="c2"
          >
            uv_
            <span
              class="c3"
            >
              test
            </span>
            _wxyz
          </li>
          <li
            class="c2"
          >
            <span
              class="c3"
            >
              test
            </span>
            123abc
          </li>
          <li
            class="c2"
          >
            opq
            <span
              class="c3"
            >
              test
            </span>
            rst
          </li>
          <li
            class="c2"
          >
            word_with_
            <span
              class="c3"
            >
              test
            </span>
          </li>
          <li
            class="c2"
          >
            the
            <span
              class="c3"
            >
              test
            </span>
            inmiddle
          </li>
          <li
            class="c2"
          >
            <span
              class="c3"
            >
              test
            </span>
            StartWith
            <span
              class="c3"
            >
              Test
            </span>
          </li>
          <li
            class="c2"
          >
            endwith
            <span
              class="c3"
            >
              test
            </span>
          </li>
          <li
            class="c2"
          >
            more_
            <span
              class="c3"
            >
              test
            </span>
            _here
          </li>
          <li
            class="c2"
          >
            A_
            <span
              class="c3"
            >
              test
            </span>
            _bc_
            <span
              class="c3"
            >
              test
            </span>
          </li>
          <li
            class="c2"
          >
            rand
            <span
              class="c3"
            >
              test
            </span>
            str
          </li>
          <li
            class="c2"
          >
            some
            <span
              class="c3"
            >
              test
            </span>
            txt
          </li>
          <li
            class="c2"
          >
            still
            <span
              class="c3"
            >
              test
            </span>
            on6
          </li>
          <li
            class="c2"
          >
            yet_another_
            <span
              class="c3"
            >
              test
            </span>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": .c0 {
  width: 100px;
  margin: 0;
  padding: 0;
  display: block;
  height: 0;
}

.c1 {
  position: absolute;
  box-sizing: border-box;
  list-style: 'none';
  width: 200px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  max-height: 300px;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background-color: white;
  border: 1px solid #aaa;
  border-radius: 3px;
  box-shadow: 3px 3px 5px 0 #999;
  z-index: 100000;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2 {
  padding: 4px 10px;
  font-size: 16px;
  font-weight: 400;
  width: auto;
  cursor: pointer;
}

.c2:hover {
  background-color: #d0d0d0;
  border: '1px solid #ccc';
}

.c3 {
  background-color: yellow;
  font-weight: bold;
}

<div>
    <div
      class="c0"
    >
      <ul
        class="c1"
      >
        <li
          class="c2"
        >
          abc_
          <span
            class="c3"
          >
            test
          </span>
          _def
        </li>
        <li
          class="c2"
        >
          no_t_e_s_t
        </li>
        <li
          class="c2"
        >
          <span
            class="c3"
          >
            Test
          </span>
          Random1
        </li>
        <li
          class="c2"
        >
          another-
          <span
            class="c3"
          >
            test
          </span>
          23
        </li>
        <li
          class="c2"
        >
          thisIs_
          <span
            class="c3"
          >
            test
          </span>
          4
        </li>
        <li
          class="c2"
        >
          <span
            class="c3"
          >
            test
          </span>
          xyzabc_
          <span
            class="c3"
          >
            Test
          </span>
        </li>
        <li
          class="c2"
        >
          Ghi_
          <span
            class="c3"
          >
            test
          </span>
          1jk
          <span
            class="c3"
          >
            test
          </span>
          2l
          <span
            class="c3"
          >
            test
          </span>
          3
        </li>
        <li
          class="c2"
        >
          lmn
          <span
            class="c3"
          >
            test
          </span>
          op
        </li>
        <li
          class="c2"
        >
          uv_
          <span
            class="c3"
          >
            test
          </span>
          _wxyz
        </li>
        <li
          class="c2"
        >
          <span
            class="c3"
          >
            test
          </span>
          123abc
        </li>
        <li
          class="c2"
        >
          opq
          <span
            class="c3"
          >
            test
          </span>
          rst
        </li>
        <li
          class="c2"
        >
          word_with_
          <span
            class="c3"
          >
            test
          </span>
        </li>
        <li
          class="c2"
        >
          the
          <span
            class="c3"
          >
            test
          </span>
          inmiddle
        </li>
        <li
          class="c2"
        >
          <span
            class="c3"
          >
            test
          </span>
          StartWith
          <span
            class="c3"
          >
            Test
          </span>
        </li>
        <li
          class="c2"
        >
          endwith
          <span
            class="c3"
          >
            test
          </span>
        </li>
        <li
          class="c2"
        >
          more_
          <span
            class="c3"
          >
            test
          </span>
          _here
        </li>
        <li
          class="c2"
        >
          A_
          <span
            class="c3"
          >
            test
          </span>
          _bc_
          <span
            class="c3"
          >
            test
          </span>
        </li>
        <li
          class="c2"
        >
          rand
          <span
            class="c3"
          >
            test
          </span>
          str
        </li>
        <li
          class="c2"
        >
          some
          <span
            class="c3"
          >
            test
          </span>
          txt
        </li>
        <li
          class="c2"
        >
          still
          <span
            class="c3"
          >
            test
          </span>
          on6
        </li>
        <li
          class="c2"
        >
          yet_another_
          <span
            class="c3"
          >
            test
          </span>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
